--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:description" content="About me">
-    <title>DR. CHIBUSOR OKOCHA, Ph.D</title>
+    <title>CHIBUZOR OKOCHA JOSEPH</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> -->
@@ -18,7 +18,7 @@
           <nav class="navbar navbar-expand-lg">
           <div class="container-fluid">
             <!-- Offcanvas toggle button -->
-            <h1 class="heading fs-2 d-block d-md-none">CHIBUSOR OKOCHA</h1>
+            <h1 class="heading fs-2 d-block d-md-none">CHIBUZOR OKOCHA</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon fw-bold align-item-end">
               <!-- <i class="bi bi-border-width"></i> -->
@@ -34,7 +34,7 @@
             <div class="offcanvas-body">
                <ul class="navbar-nav details">
                 <li class="nav-item fw-bold">
-                    <a class="nav-link scrollto" href="#">Chibusor Okocha, Ph.D.</a>
+                    <a class="nav-link scrollto" href="#">ChibuZor Okocha</a>
                 </li>
               </ul>
             <ul class="navbar-nav _details m-auto">
