--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <!-- Offcanvas menu --> 
             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
               <div class="offcanvas-header">
-              <div class="offcanvas-title" id="offcanvasNavbarLabel"><h1 class="heading fs-2">CHIBUSOR OKOCHA</h1></i></div>
+              <div class="offcanvas-title" id="offcanvasNavbarLabel"><h1 class="heading fs-2">CHIBUZOR OKOCHA</h1></i></div>
                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
              </div>
             <div class="offcanvas-body">
                <ul class="navbar-nav details">
                 <li class="nav-item fw-bold">
-                    <a class="nav-link scrollto" href="#">ChibuZor Okocha</a>
+                    <a class="nav-link scrollto" href="#">Chibuzor Okocha</a>
                 </li>
               </ul>
             <ul class="navbar-nav _details m-auto">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-lg-8">
                     <h2 class="mt-md-0 mt-4">About</h2>
-                    <p class="_0text2">I am a Fellow in the <a href="#">Center for Technology Innovation</a> at The Brookings Institution and a recent Ph.D. graduate from the Department of Computer Science at Cornell University. At Cornell, my research leveraged ethnographic methods to understand how frontline healthcare workers in rural India perceive and value AI and analyzed how AI explainability can meet the needs of novice technology users in the Global South. My work has been published at top-tier venues in HCI and sociotechnical computing (ACM CHI, CSCW, and COMPASS). I have also been recognized as a <a href="#">Trailblazer in Engineering</a>, a <a href="#">Rising Star in Management Science & Engineering</a>, and one of <a href="#">100 Brilliant Women in AI Ethics™</a>.                  </p>
+                    <p class="_0text2">I am a PhD student at the university of Florida <a href="#">Center for Technology Innovation</a> at The Brookings Institution and a recent Ph.D. graduate from the Department of Computer Science at Cornell University. At Cornell, my research leveraged ethnographic methods to understand how frontline healthcare workers in rural India perceive and value AI and analyzed how AI explainability can meet the needs of novice technology users in the Global South. My work has been published at top-tier venues in HCI and sociotechnical computing (ACM CHI, CSCW, and COMPASS). I have also been recognized as a <a href="#">Trailblazer in Engineering</a>, a <a href="#">Rising Star in Management Science & Engineering</a>, and one of <a href="#">100 Brilliant Women in AI Ethics™</a>.                  </p>
                     <p class="_0text2">At Brookings, my research continues to explore the promise of human-centered AI in the Global South by examining how African governments can enable effective AI governance, investigating the impact on data work in the Global South, and analyzing datafication and algorithmic marginalization in Africa. My general research interests include AI governance & policy, AI literacy, human-centered AI, explainable AI, data economies, African development, and global health. My work has been supported by The National GEM Consortium, Oracle Corporation, NANOG, Google, and the National Science Foundation and covered in venues like VICE, Bloomberg, Newsweek, The Washington Post, and VentureBeat, amongst others. I have been invited to share my work at industry research labs, including Google Research India, Microsoft Research India, and the Microsoft Africa Research Institute (MARI).
                     </p>
                     <p class="_0text2">I hold a Bachelor’s degree in Computer Science from Pomona College, a Master’s degree in Computer Science from Cornell University, and a Ph.D. in Computer Science from Cornell University. Aside from my work at Brookings, I also serve as a Consulting Expert with the African Union, an Ethics Advisor to the Equiano Institute, an Expert Contributing Writer to the International AI Safety Report, a member of the IEEE Standards Association working group on algorithmic bias, and a contributing member of the ACM US Technology Policy Committee.
